<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- list_of_books strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="one_piece_string">One Piece</string>
	<string name="bleach_string">Bleach</string>
	<string name="my_hero_academia_string">My Hero Academia</string>
	<string name="black_clover_string">Black Clover</string>
	<string name="solo_leveling_string">Solo Leveling</string>
	<string name="list_of_anime_books__manga__string">List of Anime Books (Manga)</string>
</resources>